# formicarium

./: .gitignore  Cargo.toml  LICENSE  README.md  conf.json  huge.json
src/: lib.rs  main.rs
src/entity/: grid.rs  mod.rs  morsel.rs  nest.rs  phero.rs
src/entity/ant/: memory.rs  mod.rs
src/game/: conf.rs  context.rs  mod.rs  state.rs
tests/: conf.json  sim.rs
