[package]
name = "formicarium"
version = "0.2.0"
authors = ["Marco Conte <gliderkite@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
ggez = "0.6.0-rc2"
log = "0.4"
rand = "0.8"
semeion = { git = "https://github.com/gliderkite/semeion", branch = "exp", features = ["parallel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
