[package]
name = "formicarium"
version = "0.2.1"
authors = ["Marco Conte <gliderkite@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
ggez = "0.7"
log = "0.4"
rand = "0.8"
semeion = { version = "0.9", features = ["parallel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
